--- a/style.css
+++ b/style.css
@@ -27,11 +27,12 @@
   padding: 6px 0;
   border-radius: 24px;
   border: none;
-  background-color: #ffd53b;
+  background-color: #FEC715;
   font-family: "main";
   -webkit-box-shadow: 5px 5px 6px #00000069;
           box-shadow: 5px 5px 6px #00000069;
   width: 142px;
+  font-size: 8.57143pt;
 }
 
 .orangeButton.bt {
@@ -136,10 +137,10 @@
   display: -ms-grid;
   display: grid;
   height: 600px;
-  -ms-grid-columns: 25% 50% 25%;
-      grid-template-columns: 25% 50% 25%;
-  -ms-grid-rows: 35% 30% 35%;
-      grid-template-rows: 35% 30% 35%;
+  -ms-grid-columns: 24% 52% 24%;
+      grid-template-columns: 24% 52% 24%;
+  -ms-grid-rows: 39% 24% 37%;
+      grid-template-rows: 39% 24% 37%;
   background-color: #444444;
   padding: 20px 10px;
   -webkit-box-sizing: border-box;
@@ -205,8 +206,9 @@
 }
 
 .footer .rightTop .layer .text {
-  color: #bebebe;
-  font-size: 14px;
+  color: #FFFFED;
+  font-size: 10.47619pt;
+  text-shadow: 3px 3px 5px rgba(58, 57, 55, 0.75);
 }
 
 .footer .rightTop .layer .img {
@@ -222,11 +224,12 @@
   padding: 8px 16px;
   border: none;
   width: 233px;
-  background-color: #e9e9e9;
+  background-color: #DEDEDE;
   -webkit-box-shadow: 3px 3px 3px #0000006b;
           box-shadow: 3px 3px 3px #0000006b;
   font-family: main;
-  font-size: 12px;
+  font-size: 9.52381pt;
+  color: #757575;
 }
 
 .footer .rightTop .inputwrapper .emailInput:focus {
@@ -258,11 +261,31 @@
   -webkit-box-direction: normal;
       -ms-flex-direction: column;
           flex-direction: column;
+  margin-bottom: 20px;
 }
 
 .footer .centerTop .layer1 > p {
-  margin: 5px 0;
-  color: #bebebe;
+  margin: 2px 0;
+  color: #FFFFED;
+}
+
+.footer .centerTop .layer1 p.title {
+  font-size: 11.90476pt;
+  letter-spacing: 4px;
+}
+
+.footer .centerTop .layer1 p.address {
+  font-size: 9.52381pt;
+}
+
+.footer .centerTop .layer1 p.site {
+  font-size: 11.90476pt;
+  letter-spacing: 4px;
+}
+
+.footer .centerTop .layer1 p.num {
+  font-size: 9.52381pt;
+  letter-spacing: 2px;
 }
 
 .footer .leftTop {
@@ -284,20 +307,34 @@
 }
 
 .footer .leftTop .counsel .number {
-  color: white;
+  font-size: 11.90476pt;
+  color: #FFFFED;
   position: absolute;
   top: 0;
-  right: -16px;
+  right: 8px;
+  text-shadow: 3px 3px 5px rgba(58, 57, 55, 0.75);
+  letter-spacing: 2px;
+}
+
+.footer .leftTop .counsel img {
+  position: relative;
+  right: 41px;
+  top: 4px;
+  width: 103px;
 }
 
 .footer .leftTop .counsel .info {
-  color: white;
+  color: #FFFFED;
+  font-size: 9.52381pt;
+  text-shadow: 3px 3px 5px rgba(58, 57, 55, 0.75);
+  letter-spacing: 2px;
 }
 
 .footer .centerCenter .hr {
   width: 75%;
   margin: 0;
-  background: -webkit-gradient(radial, 50% 50%, 0, 50% 50%, 350, from(#ff9c21), to(#444444));
+  background: -webkit-gradient(linear, right top, left top, from(transparent), color-stop(#FF7A18), to(transparent));
+  background: linear-gradient(to left, transparent, #FF7A18, transparent);
   height: 5px;
 }
 
@@ -310,7 +347,7 @@
       -ms-flex-direction: row;
           flex-direction: row;
   gap: 30px;
-  margin-top: 45px;
+  margin-top: 32px;
 }
 
 .footer .centerCenter .layer2 .item {
@@ -331,27 +368,26 @@
 }
 
 .footer .centerCenter .layer2 .item > img {
-  width: auto;
+  width: 33px;
+}
+
+.footer .centerCenter .layer2 .item > img.small {
+  width: 27px;
 }
 
 .footer .centerCenter .layer2 .item > span {
-  color: #bebebe;
-  font-size: 12px;
+  color: #FFFFED;
+  font-size: 8.57143pt;
 }
 
-.footer .rightBottom .EnamadWrapper {
-  padding: 9px;
-  background-color: #3f3f3f;
-  border-radius: 18px;
-  -webkit-box-shadow: 2px 2px 10px black;
-          box-shadow: 2px 2px 10px black;
-}
-
-.footer .rightBottom .EnamadWrapper .eNamad {
+.footer .rightBottom .eNamad {
   width: 130px;
   background-color: white;
-  border-radius: 12px;
   display: block;
+  -webkit-box-shadow: 4px 4px 5px rgba(58, 57, 55, 0.75);
+          box-shadow: 4px 4px 5px rgba(58, 57, 55, 0.75);
+  border-radius: 30px;
+  border: 15px solid #333333;
 }
 
 .footer .centerBottom {
@@ -379,17 +415,18 @@
 }
 
 .footer .centerBottom .wholeNav .nav1 > .item {
-  color: #bebebe;
-  font-size: 12px;
+  color: #FFFFED;
+  font-size: 8.57143pt;
 }
 
 .footer .centerBottom .wholeNav .line {
   width: 75%;
   display: block;
   margin: auto;
-  margin-top: 35px;
+  margin-top: 25px;
   margin-bottom: 15px;
-  background: -webkit-gradient(radial, 50% 50%, 0, 50% 50%, 350, from(white), to(#444444));
+  background: -webkit-gradient(linear, left top, right top, from(transparent), color-stop(#FFFFED), to(transparent));
+  background: linear-gradient(to right, transparent, #FFFFED, transparent);
   height: 1px;
 }
 
@@ -408,7 +445,8 @@
 }
 
 .footer .centerBottom .wholeNav .nav2 .item {
-  color: #ffd53b;
+  color: #FEC715;
+  font-size: 11.42857pt;
 }
 
 .footer .centerBottom .layer3 {
@@ -420,19 +458,28 @@
       -ms-flex-direction: row-reverse;
           flex-direction: row-reverse;
   gap: 20px;
-  margin-bottom: 20px;
+  margin-bottom: 40px;
 }
 
 .footer .centerBottom .layer3 > img {
   width: 35px;
 }
 
+.footer .leftBottom img {
+  width: 133px;
+  position: relative;
+  bottom: 9px;
+  right: 9px;
+}
+
 .footer .leftBottom .telegraph {
-  color: white;
-  border: 2px solid white;
-  padding: 4px 12px;
-  border-radius: 12px;
-  -webkit-box-shadow: 0 0 10px #0000006b;
-          box-shadow: 0 0 10px #0000006b;
+  color: #FFFFED;
+  border: 2px solid #FFFFED;
+  padding: 4px 18px;
+  border-radius: 16px;
+  -webkit-box-shadow: 3px 3px 5px rgba(58, 57, 55, 0.75);
+          box-shadow: 3px 3px 5px rgba(58, 57, 55, 0.75);
+  font-size: 11.90476pt;
+  margin-right: 25px;
 }
 /*# sourceMappingURL=style.css.map */
