--- a/style.scss
+++ b/style.scss
@@ -15,11 +15,11 @@
 .signupLayer {
   position: relative;
   .click {
-      position: absolute;
-      right: -28px;
-      top: 1px;
-      width: 70px;
-    }
+    position: absolute;
+    right: -28px;
+    top: 1px;
+    width: 70px;
+  }
 }
 
 .orangeButton {
@@ -30,12 +30,13 @@
   font-family: "main";
   box-shadow: 5px 5px 6px #00000069;
   width: 142px;
+  font-size: 18pt / $fontScale;
   &.bt {
     color: $orangeButtonText;
     font-weight: bold;
   }
   &.pr {
-      padding-right: 16px;
+    padding-right: 16px;
   }
 }
 
@@ -105,8 +106,8 @@
 .footer {
   display: grid;
   height: 600px;
-  grid-template-columns: 25% 50% 25%;
-  grid-template-rows: 35% 30% 35%;
+  grid-template-columns: 24% 52% 24%;
+  grid-template-rows: 39% 24% 37%;
   background-color: $footerBackground;
   padding: 20px 10px;
   box-sizing: border-box;
@@ -147,7 +148,8 @@
       align-items: center;
       .text {
         color: $footerWhiteText;
-        font-size: 14px;
+        font-size: 22pt / $fontScale;
+        text-shadow: $SHADOWS;
       }
       .img {
         width: 113px;
@@ -163,7 +165,8 @@
         background-color: $footerEmailInputBackground;
         box-shadow: 3px 3px 3px #0000006b;
         font-family: main;
-        font-size: 12px;
+        font-size: 20pt / $fontScale;
+        color: $footerEmailInputColor;
         &:focus {
           outline: none;
         }
@@ -186,11 +189,27 @@
       justify-content: center;
       align-items: center;
       flex-direction: column;
+      margin-bottom: 20px;
       > p {
-        margin: 5px 0;
+        margin: 2px 0;
         color: $footerWhiteText;
       }
-      p.en {
+      p.title {
+        font-size: 25pt / $fontScale;
+        letter-spacing: letterSpace(100) * 1px;
+      }
+      p.address {
+        font-size: 20pt / $fontScale;
+      }
+      p.site {
+        font-size: 25pt / $fontScale;
+        letter-spacing: letterSpace(100)* 1px;
+
+      }
+      p.num {
+        font-size: 20pt / $fontScale;
+        letter-spacing: letterSpace(50)* 1px;
+
       }
     }
   }
@@ -202,15 +221,26 @@
       flex-direction: column;
       align-items: center;
       .number {
-        color: white;
+        font-size: 25pt / $fontScale;
+        color: $footerWhiteText;
         position: absolute;
         top: 0;
-        right: -16px;
+        right: 8px;
+        text-shadow: $SHADOWS;
+        letter-spacing: letterSpace(50) * 1px;
+
       }
-      .img {
+      img {
+        position: relative;
+    right: 41px;
+    top: 4px;
+    width: 103px;
       }
       .info {
-        color: white;
+        color: $footerWhiteText;
+        font-size: 20pt / $fontScale;
+        text-shadow: $SHADOWS;
+        letter-spacing: letterSpace(50) * 1px;
       }
     }
   }
@@ -220,14 +250,19 @@
     .hr {
       width: 75%;
       margin: 0;
-      background: -webkit-gradient(radial, 50% 50%, 0, 50% 50%, 350, from($footerOrangeLine), to($footerBackground));
+      background: linear-gradient(
+        to left,
+        transparent,
+        $footerOrangeLine,
+        transparent
+      );
       height: 5px;
     }
     .layer2 {
       display: flex;
       flex-direction: row;
       gap: 30px;
-      margin-top: 45px;
+      margin-top: 32px;
       .item {
         display: flex;
         flex-direction: column;
@@ -235,11 +270,14 @@
         align-items: center;
         gap: 10px;
         > img {
-          width: auto;
+          width: 33px;
+        }
+        > img.small {
+          width: 27px;
         }
         > span {
           color: $footerWhiteText;
-          font-size: 12px;
+          font-size: 18pt / $fontScale;
         }
       }
     }
@@ -247,17 +285,13 @@
   .leftCenter {
   }
   .rightBottom {
-    .EnamadWrapper {
-      padding: 9px;
-      background-color: $Enamad-wrapper;
-      border-radius: 18px;
-      box-shadow: 2px 2px 10px black;
-      .eNamad {
-        width: 130px;
-        background-color: white;
-        border-radius: 12px;
-        display: block;
-      }
+    .eNamad {
+      width: 130px;
+      background-color: white;
+      display: block;
+      box-shadow: $EnamadShadow;
+      border-radius: 30px;
+      border: 15px solid $Enamad-border;
     }
   }
   .centerBottom {
@@ -272,16 +306,21 @@
 
         > .item {
           color: $footerWhiteText;
-          font-size: 12px;
+          font-size: 18pt / $fontScale;
         }
       }
       .line {
         width: 75%;
         display: block;
         margin: auto;
-        margin-top: 35px;
+        margin-top: 25px;
         margin-bottom: 15px;
-        background: -webkit-gradient(radial, 50% 50%, 0, 50% 50%, 350, from(white), to($footerBackground));
+        background: linear-gradient(
+          to right,
+          transparent,
+          $footerWhiteLine,
+          transparent
+        );
         height: 1px;
       }
       .nav2 {
@@ -290,7 +329,8 @@
         justify-content: center;
         gap: 35px;
         .item {
-          color: $footerOrangeButton;
+          color: $footerOrangeText;
+          font-size: 24pt / $fontScale;
         }
       }
     }
@@ -301,16 +341,24 @@
       display: flex;
       flex-direction: row-reverse;
       gap: 20px;
-      margin-bottom: 20px;
+      margin-bottom: 40px;
     }
   }
   .leftBottom {
+    img {
+      width: 133px;
+      position: relative;
+      bottom: 9px;
+      right: 9px;
+    }
     .telegraph {
-      color: white;
-      border: 2px solid white;
-      padding: 4px 12px;
-      border-radius: 12px;
-      box-shadow: 0 0 10px #0000006b;
+      color: $footerWhiteText;
+      border: 2px solid $footerWhiteText;
+      padding: 4px 18px;
+      border-radius: 16px;
+      box-shadow: $SHADOWS;
+      font-size: 25pt / $fontScale;
+      margin-right: 25px;
     }
   }
 }
