--- a/_Variables.scss
+++ b/_Variables.scss
@@ -19,10 +19,11 @@ $footerEmailInputBackground: #DEDEDE;
 $footerOrangeText:#FEC715;
 $footerWhiteLine:#FFFFED;
 $footerEmailInputColor:#757575;
-$SHADOWS: 3px 3px 5px rgba(58,57,55,.75);
+//$SHADOWS: 3px 3px 5px rgba(58,57,55,.75);
+$SHADOWS: 3px 3px 5px rgba(16 ,16, 16, .75);
 
 
-$EnamadShadow: 4px 4px 5px rgba(58,57,55,.75);
+$EnamadShadow: 4px 4px 5px #3A3937;
 $Enamad-border:#333333;
 
 $fontScale: 2.1;
@@ -31,3 +32,4 @@ $fontScale: 2.1;
     $result: $unit / 25;
     @return $result;
 }
+/*-----------------------------------------*/
