--- a/style.css
+++ b/style.css
@@ -1,4 +1,5 @@
 /*-------------FOOOTER-------------------*/
+/*-----------------------------------------*/
 .pillButton {
   color: #6d6dff;
   font-family: main;
@@ -24,15 +25,16 @@
 }
 
 .orangeButton {
-  padding: 6px 0;
+  padding: 7px 0;
   border-radius: 24px;
   border: none;
   background-color: #FEC715;
   font-family: "main";
   -webkit-box-shadow: 5px 5px 6px #00000069;
           box-shadow: 5px 5px 6px #00000069;
-  width: 142px;
+  width: 133px;
   font-size: 8.57143pt;
+  font-weight: bold;
 }
 
 .orangeButton.bt {
@@ -137,8 +139,8 @@
   display: -ms-grid;
   display: grid;
   height: 600px;
-  -ms-grid-columns: 24% 52% 24%;
-      grid-template-columns: 24% 52% 24%;
+  -ms-grid-columns: 26% 49% 25%;
+      grid-template-columns: 26% 49% 25%;
   -ms-grid-rows: 39% 24% 37%;
       grid-template-rows: 39% 24% 37%;
   background-color: #444444;
@@ -203,27 +205,32 @@
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
+  height: 75px;
 }
 
 .footer .rightTop .layer .text {
   color: #FFFFED;
   font-size: 10.47619pt;
-  text-shadow: 3px 3px 5px rgba(58, 57, 55, 0.75);
+  text-shadow: 3px 3px 5px rgba(16, 16, 16, 0.75);
+  margin-right: 30px;
+  margin-right: 56px;
+  margin-left: 4px;
 }
 
 .footer .rightTop .layer .img {
-  width: 113px;
+  width: 120px;
 }
 
 .footer .rightTop .inputwrapper {
   position: relative;
+  margin-bottom: 12px;
 }
 
 .footer .rightTop .inputwrapper .emailInput {
   border-radius: 21px;
-  padding: 8px 16px;
+  padding: 9px 16px;
   border: none;
-  width: 233px;
+  width: 250px;
   background-color: #DEDEDE;
   -webkit-box-shadow: 3px 3px 3px #0000006b;
           box-shadow: 3px 3px 3px #0000006b;
@@ -312,7 +319,7 @@
   position: absolute;
   top: 0;
   right: 8px;
-  text-shadow: 3px 3px 5px rgba(58, 57, 55, 0.75);
+  text-shadow: 3px 3px 5px rgba(16, 16, 16, 0.75);
   letter-spacing: 2px;
 }
 
@@ -326,7 +333,7 @@
 .footer .leftTop .counsel .info {
   color: #FFFFED;
   font-size: 9.52381pt;
-  text-shadow: 3px 3px 5px rgba(58, 57, 55, 0.75);
+  text-shadow: 3px 3px 5px rgba(16, 16, 16, 0.75);
   letter-spacing: 2px;
 }
 
@@ -384,8 +391,8 @@
   width: 130px;
   background-color: white;
   display: block;
-  -webkit-box-shadow: 4px 4px 5px rgba(58, 57, 55, 0.75);
-          box-shadow: 4px 4px 5px rgba(58, 57, 55, 0.75);
+  -webkit-box-shadow: 4px 4px 5px #3A3937;
+          box-shadow: 4px 4px 5px #3A3937;
   border-radius: 30px;
   border: 15px solid #333333;
 }
@@ -477,8 +484,8 @@
   border: 2px solid #FFFFED;
   padding: 4px 18px;
   border-radius: 16px;
-  -webkit-box-shadow: 3px 3px 5px rgba(58, 57, 55, 0.75);
-          box-shadow: 3px 3px 5px rgba(58, 57, 55, 0.75);
+  -webkit-box-shadow: 3px 3px 5px rgba(16, 16, 16, 0.75);
+          box-shadow: 3px 3px 5px rgba(16, 16, 16, 0.75);
   font-size: 11.90476pt;
   margin-right: 25px;
 }
