--- a/style.css
+++ b/style.css
@@ -30,8 +30,8 @@
   border: none;
   background-color: #FEC715;
   font-family: "main";
-  -webkit-box-shadow: 5px 5px 6px #00000069;
-          box-shadow: 5px 5px 6px #00000069;
+  -webkit-box-shadow: 3px 3px 5px rgba(16, 16, 16, 0.75);
+          box-shadow: 3px 3px 5px rgba(16, 16, 16, 0.75);
   width: 133px;
   font-size: 8.57143pt;
   font-weight: bold;
@@ -252,6 +252,11 @@
   background-color: #444444;
   padding: 5px;
   border-radius: 50%;
+}
+
+.footer .centerTop img {
+  width: 90px;
+  margin-bottom: 5px;
 }
 
 .footer .centerTop .layer1 {
