--- a/style.css
+++ b/style.css
@@ -22,6 +22,10 @@
   right: -28px;
   top: 1px;
   width: 70px;
+  height: 60px;
+  background: url("./data/Header-Footer.png");
+  background-position: -8px -9px;
+  background-size: 740%;
 }
 
 .orangeButton {
@@ -328,11 +332,16 @@
   letter-spacing: 2px;
 }
 
-.footer .leftTop .counsel img {
+.footer .leftTop .counsel .img {
   position: relative;
   right: 41px;
   top: 4px;
-  width: 103px;
+  width: 89px;
+  height: 94px;
+  background: url("./data/Header-Footer.png");
+  background-position: -102px -58px;
+  background-size: 499%;
+  margin-bottom: 6px;
 }
 
 .footer .leftTop .counsel .info {
@@ -477,11 +486,51 @@
   width: 35px;
 }
 
-.footer .leftBottom img {
+.footer .centerBottom .layer3 .footerImage {
+  width: 35px;
+  height: 35px;
+  background: url("./data/Header-Footer.png");
+  background-size: 1182%;
+  background-position-y: 72px;
+}
+
+.footer .centerBottom .layer3 .footerImage.one {
+  background-position-x: -1px;
+}
+
+.footer .centerBottom .layer3 .footerImage.two {
+  background-position-x: -38px;
+}
+
+.footer .centerBottom .layer3 .footerImage.three {
+  background-position-x: -76px;
+}
+
+.footer .centerBottom .layer3 .footerImage.four {
+  background-position: -113px 74px;
+}
+
+.footer .centerBottom .layer3 .footerImage.five {
+  background-position: -150px 74px;
+}
+
+.footer .centerBottom .layer3 .footerImage.six {
+  background-position: -186px 74px;
+}
+
+.footer .centerBottom .layer3 .footerImage.seven {
+  background-position: -224px 74px;
+}
+
+.footer .leftBottom .img {
+  background: url(./data/Header-Footer.png);
+  height: 58px;
   width: 133px;
   position: relative;
   bottom: 9px;
   right: 9px;
+  background-position: -79px -5px;
+  background-size: 367%;
 }
 
 .footer .leftBottom .telegraph {
