--- a/style.scss
+++ b/style.scss
@@ -20,7 +20,7 @@
     top: 1px;
     width: 70px;
     height: 60px;
-    background: url('./data/Header-Footer.png');
+    background: url("./data/Header-Footer.png");
     background-position: -8px -9px;
     background-size: 740%;
   }
@@ -286,11 +286,26 @@
         justify-content: flex-end;
         align-items: center;
         gap: 10px;
-        > img {
+        > .img {
           width: 33px;
-        }
-        > img.small {
-          width: 27px;
+          height: 33px;
+          background: url("./data/Header-Footer.png");
+          background-size: 1380%;
+          &.one {
+            background-position: -103px 34px;
+          }
+          &.two {
+            background-position: -67px 35px;
+          }
+          &.three {
+            background-position: -37px 34px;
+            width: 28px;
+            background-size: 1624%;
+          }
+          &.four {
+            background-position: -1px 34px;
+            background-size: 1325%;
+          }
         }
         > span {
           color: $footerWhiteText;
