home structure made.

--- a/_Variables.scss
+++ b/_Variables.scss
@@ -1,14 +1,20 @@
+$orangeButton: #FEC715;
+$orangeButtonText: rgb(74, 74, 228);
+/*------------------HEADER-----------------*/
+$sideMenuLength: 230px;
 $topMenuColor: rgb(32, 103, 255);
-$sideMenuLength: 300px;
 $headerWhiteText: rgb(247, 247, 247);
 $headerCalenderIconWidth: 20%;
 $headerNavColor: rgb(59, 59, 185);
 $headerNavFont: 13px;
 
-$sideTitleColor: pink;
+$sideTitleColor: #e71361;
 
-$orangeButton: #FEC715;
-$orangeButtonText: rgb(74, 74, 228);
+$calendarText: #149bd9;
+$themeTextBlue: #149bd9;
+$themeDarkenBlue: #1178a8;
+
+$inputBlue: rgb(35, 162, 212);
 
 
 /*-------------FOOOTER-------------------*/
