home structure is done. colors catagorized.

--- a/_Variables.scss
+++ b/_Variables.scss
@@ -8,7 +8,12 @@ $headerCalenderIconWidth: 20%;
 $headerNavColor: rgb(59, 59, 185);
 $headerNavFont: 13px;
 
-$sideTitleColor: #e71361;
+$themeBlue: #1d71b9;
+$themeBlueLight: #149bd9;
+$themeBlueDark: #0d72a1;
+
+$themePurple: #d50c52;
+
 
 $calendarText: #149bd9;
 $themeTextBlue: #149bd9;
@@ -26,7 +31,8 @@ $footerOrangeText:#FEC715;
 $footerWhiteLine:#FFFFED;
 $footerEmailInputColor:#757575;
 //$SHADOWS: 3px 3px 5px rgba(58,57,55,.75);
-$SHADOWS: 3px 3px 5px rgba(16 ,16, 16, .75);
+$SHADOW: 3px 3px 5px rgba(16 ,16, 16, .75);
+$SHADOW-LIGHT: 3px 3px 5px rgba(16, 16, 16, 0.301);
 
 
 $EnamadShadow: 4px 4px 5px #3A3937;
